--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>arcanaeum</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Merienda'>
   </head>
   <body>
     <noscript>
