--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <% if (process.env.NODE_ENV === 'production') { %>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39641174-2"></script>
     <script>
@@ -13,6 +14,7 @@
       
       gtag('config', 'UA-39641174-2');
     </script>
+    <% } %>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>arcanaeum</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
