--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:url" content="https://archonsarcanaeum.xyz">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Archons' Arcanaeum">
     <meta property="og:description" content="The unofficial repository for the Archons of the Spire (part of Last Hope LARP)">
     <meta property="og:image" content="https://archonsarcanaeum.xyz/banner.png">
     <% if (process.env.NODE_ENV === 'production') { %>
