--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Archons' Arcanaeum">
     <meta property="og:description" content="The unofficial repository for the Archons of the Spire (part of Last Hope LARP)">
-    <meta property="og:image" content="https://archonsarcanaeum.xyz/img/banner.svg">
+    <meta property="og:image" content="https://archonsarcanaeum.xyz/images/banner.jpg">
     <% if (process.env.NODE_ENV === 'production') { %>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39641174-2"></script>
@@ -24,8 +24,6 @@
     <title>arcanaeum</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Merienda'>
   </head>
   <body>
     <noscript>
