--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
     <meta property="og:image" content="https://archonsarcanaeum.xyz/img/banner.jpg">
     <% if (process.env.NODE_ENV === 'production') { %>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39641174-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6R9GYD8S4K"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      
-      gtag('config', 'UA-39641174-2');
+
+      gtag('config', 'G-6R9GYD8S4K');
     </script>
     <% } %>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
