adding blog to home cards

--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Archons' Arcanaeum</title>
-    <meta property="og:url" content="https://archonsarcanaeum.xyz" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Archons' Arcanaeum" />
-    <meta
-      property="og:description"
-      content="The unofficial repository for the Archons of the Spire (part of Last Hope LARP)"
-    />
-    <meta
-      property="og:image"
-      content="https://archonsarcanaeum.xyz/img/banner.jpg"
-    />
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Archons' Arcanaeum</title>
+  <meta property="og:url" content="https://archonsarcanaeum.xyz" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Archons' Arcanaeum" />
+  <meta property="og:description"
+    content="Backend sorcerer conjuring Go, Node.js, and Python into scalable spells. Fighting tech entropy with CI/CD runes and sarcastic precision." />
+  <meta property="og:image" content="https://archonsarcanaeum.xyz/img/banner.jpg" />
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
